# warpcore

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.kiro/specs/strands-aws-deployment-system/: design.md  requirements.md  tasks.md
docs/: QUICK_REFERENCE.md  TASK_12_COMPLETION_SUMMARY.md  TASK_15_COMPLETION_SUMMARY.md  aws-client-error-handling.md  task-10-deployment-history-summary.md  task-11-local-dev-summary.md  task-12-agentic-reconciliation-summary.md  task-13-visual-builder-summary.md  task-14-monitoring-observability-summary.md  task-15-quick-wins-summary.md  task-5-implementation-summary.md  task-6-provisioners-summary.md  task-7-orchestration-summary.md  task-8-optimizer-summary.md  task-9-cli-commands-summary.md
examples/: agentic_reconciliation_example.py  aws_client_example.py  monitoring_example.py
src/strands_deploy/: __init__.py
src/strands_deploy/agentic/: README.md  __init__.py  llm_client.py  models.py  reconciler.py  scanner.py
src/strands_deploy/cli/: __init__.py  agentic.py  costs.py  diff.py  forecast.py  graph.py  limits.py  main.py  notifications.py  output.py  validate.py
src/strands_deploy/config/: __init__.py  models.py  monorepo.py  parser.py
src/strands_deploy/history/: __init__.py  comparison.py  cost_estimator.py  manager.py  models.py  retention.py
src/strands_deploy/local_dev/: __init__.py  connectivity.py  server.py
src/strands_deploy/monitoring/: __init__.py  alarm_manager.py  metrics_collector.py  xray_config.py
visual-builder/: IMPLEMENTATION_NOTES.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
visual-builder/src/: App.tsx  index.css
visual-builder/src-tauri/: Cargo.toml  tauri.conf.json
visual-builder/src-tauri/src/: main.rs
(+52 files in other folders)
