[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strands-deploy"
version = "1.0.0"
description = "AWS deployment system for Strands SDK agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Strands Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "boto3>=1.34.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "moto>=4.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
strands = "strands_deploy.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
